<resources>
    <string name="app_name">ChitChat</string>
    <string name="chitchat_logo">ChitChat Logo</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="rest_password">Rest Password</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_correct_email">Enter correct email\n</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="register_here">Register here</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
</resources>